Fix minor layout issues in media queries

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -406,7 +406,6 @@ footer p {
 .left-about-container, .right-about-container  {
     width: 100%;
     float: left;
-    padding: 10px;
     border: 2px solid #F6F6F6;
     margin-top: 5px;
     }
@@ -425,12 +424,16 @@ footer p {
     text-align: center;
     padding: 0 20px;
 }
+
+.right-about-container a {
+    float: none;
+}
  
 .center-about-container {
     clear: both;
     width: 100%;
     float: left;
-    padding: 20px;
+    padding: 1px;
 } 
 
 .sessions div {
@@ -460,9 +463,15 @@ footer p {
     left: 0px;
     }
 
+.intro-section {
+    width: 100%;
+    height: 500px;
+    margin: 0 auto;
+}   
+
 .about-intro-section {
     width: 100%;
-    height: 1200px;
+    height: 1100px;
     margin: 0 auto;
     }
 
@@ -498,6 +507,7 @@ footer p {
 
 .about-us-container {
     width: 100%;
+    border-style: none;
 }
 
 .contact-us-form {
